--- a/main.css
+++ b/main.css
@@ -1,28 +1,37 @@
-body {
-    background: radial-gradient(closest-side, #3f87a6, #ebf8e1, #f69d3c);
-}
-
-.container {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100vw;
-    flex-direction: column;
-    width: 90%;
-    margin: auto;
-    text-align: center;
-}
-
-.row {
-    display: flex;
-    flex-wrap: nowrap;
-    flex: 1;
-    align-self: center;
-}
-
-.dice {
-    text-align: center;
-    display: flex;
-    font-family: Arial, Helvetica, sans-serif;
-    position: relative;
-    top: 50px;
-}
+            body {
+                background: radial-gradient(#e66465, #9198e5);
+            }
+            
+            h1 {
+                font-weight: 900;
+                position: relative;
+                top: 20px;
+            }
+            
+            .container {
+                display: flex;
+                flex-wrap: nowrap;
+                width: 100vw;
+                flex-direction: column;
+                width: 90%;
+                margin: auto;
+                text-align: center;
+            }
+            
+            .row {
+                display: flex;
+                flex-wrap: nowrap;
+                position: relative;
+                top: 50px;
+                flex: 1;
+                align-self: center;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            
+            .dice {
+                text-align: center;
+                display: flex;
+                font-family: Arial, Helvetica, sans-serif;
+                position: relative;
+                top: 160px;
+            }
