--- a/main.css
+++ b/main.css
@@ -1,45 +1,79 @@
-            body {
-                background: radial-gradient(#e66465, #9198e5);
-            }
-            
-            h1 {
-                font-weight: 900;
-                position: relative;
-                top: 20px;
-            }
-            
-            .container {
-                display: flex;
-                flex-wrap: nowrap;
-                width: 100vw;
-                flex-direction: column;
-                width: 90%;
-                margin: auto;
-                text-align: center;
-            }
-            
-            .row {
-                display: flex;
-                flex-wrap: nowrap;
-                position: relative;
-                top: 50px;
-                flex: 1;
-                align-self: center;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-            
-            .dice {
-                text-align: center;
-                display: flex;
-                font-family: Arial, Helvetica, sans-serif;
-                position: relative;
-                top: 160px;
-            }
-            
-            .img1 {
-                border-radius: 10%;
-            }
-            
-            .img2 {
-                border-radius: 10%;
-            }
+        body {
+            background: radial-gradient(#e66465, #9198e5);
+        }
+        
+        h1 {
+            font-weight: 900;
+            position: relative;
+            top: 10px;
+        }
+        
+        .row-header {
+            color: #d7a665;
+        }
+        
+        .container {
+            display: flex;
+            flex-wrap: nowrap;
+            width: 100vw;
+            flex-direction: column;
+            width: 90%;
+            margin: auto;
+            text-align: center;
+        }
+        
+        .row {
+            display: flex;
+            flex-wrap: nowrap;
+            position: relative;
+            top: 50px;
+            align-self: center;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
+        .dice {
+            text-align: center;
+            display: flex;
+            font-family: Arial, Helvetica, sans-serif;
+            position: relative;
+            top: 160px;
+        }
+        
+        p {
+            display: flex;
+            position: relative;
+            top: 50px;
+        }
+        
+        #roll {
+            display: flex;
+            top: 30px;
+            border-top: 1px solid #78b7de;
+            background: #65a9d7;
+            background: -webkit-gradient(linear, left top, left bottom, from(#9c813e), to(#65a9d7));
+            background: -webkit-linear-gradient(top, #9c813e, #65a9d7);
+            background: -moz-linear-gradient(top, #9c813e, #65a9d7);
+            background: -ms-linear-gradient(top, #9c813e, #65a9d7);
+            background: -o-linear-gradient(top, #9c813e, #65a9d7);
+            padding: 18.5px 37px;
+            -webkit-border-radius: 29px;
+            -moz-border-radius: 29px;
+            border-radius: 29px;
+            -webkit-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+            -moz-box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+            box-shadow: rgba(0, 0, 0, 1) 0 1px 0;
+            text-shadow: rgba(0, 0, 0, .4) 0 1px 0;
+            color: #311e9b;
+            font-size: 22px;
+            font-family: Helvetica, Arial, Sans-Serif;
+            text-decoration: none;
+            vertical-align: middle;
+        }
+        
+        .img1 {
+            border-radius: 10%;
+        }
+        
+        .img2 {
+            border-radius: 10%;
+        }
