--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
         body {
-            background: radial-gradient(#e66465, #9198e5);
+            background: radial-gradient(circle at 100%, #333, #333 50%, #eee 75%);
         }
         
         h1 {
